@@ -1,26 +1,29 @@
 package com.zombie_cute.mc.bakingdelight.recipe.custom;
 
-import com.google.gson.JsonArray;
-import com.google.gson.JsonObject;
+import com.mojang.serialization.DataResult;
+import com.mojang.serialization.MapCodec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
 import com.zombie_cute.mc.bakingdelight.block.ModBlocks;
-import net.minecraft.inventory.SimpleInventory;
 import net.minecraft.item.ItemStack;
-import net.minecraft.network.PacketByteBuf;
-import net.minecraft.recipe.*;
-import net.minecraft.registry.DynamicRegistryManager;
-import net.minecraft.util.Identifier;
-import net.minecraft.util.JsonHelper;
+import net.minecraft.network.RegistryByteBuf;
+import net.minecraft.network.codec.PacketCodec;
+import net.minecraft.recipe.Ingredient;
+import net.minecraft.recipe.Recipe;
+import net.minecraft.recipe.RecipeSerializer;
+import net.minecraft.recipe.RecipeType;
+import net.minecraft.recipe.input.SingleStackRecipeInput;
+import net.minecraft.registry.RegistryWrapper;
 import net.minecraft.util.collection.DefaultedList;
 import net.minecraft.world.World;
 
-public class MixWithWaterRecipe implements Recipe<SimpleInventory> {
-    private final Identifier id;
+import java.util.List;
+
+public class MixWithWaterRecipe implements Recipe<SingleStackRecipeInput> {
     private final ItemStack output;
-    private final DefaultedList<Ingredient> recipeItems;
-    public MixWithWaterRecipe(Identifier id, DefaultedList<Ingredient> ingredients, ItemStack itemStack){
-        this.id = id;
+    private final List<Ingredient> recipeItem;
+    public MixWithWaterRecipe(List<Ingredient> ingredients, ItemStack itemStack){
         this.output = itemStack;
-        this.recipeItems = ingredients;
+        this.recipeItem = ingredients;
     }
 
     @Override
@@ -29,16 +32,13 @@ public class MixWithWaterRecipe implements Recipe<SimpleInventory> {
     }
 
     @Override
-    public boolean matches(SimpleInventory inventory, World world) {
-        if (world.isClient){
-            return false;
-        }
-        return recipeItems.get(0).test(inventory.getStack(0));
+    public boolean matches(SingleStackRecipeInput inventory, World world) {
+        return recipeItem.getFirst().test(inventory.getStackInSlot(0));
     }
 
     @Override
-    public ItemStack craft(SimpleInventory inventory, DynamicRegistryManager registryManager) {
-        return output;
+    public ItemStack craft(SingleStackRecipeInput input, RegistryWrapper.WrapperLookup lookup) {
+        return output.copy();
     }
 
     @Override
@@ -47,20 +47,15 @@ public class MixWithWaterRecipe implements Recipe<SimpleInventory> {
     }
 
     @Override
-    public ItemStack getOutput(DynamicRegistryManager registryManager) {
-        return output;
+    public ItemStack getResult(RegistryWrapper.WrapperLookup registriesLookup) {
+        return output.copy();
     }
 
     @Override
     public DefaultedList<Ingredient> getIngredients() {
-        DefaultedList<Ingredient> list = DefaultedList.ofSize(this.recipeItems.size());
-        list.addAll(recipeItems);
+        DefaultedList<Ingredient> list = DefaultedList.ofSize(this.recipeItem.size());
+        list.addAll(recipeItem);
         return list;
-    }
-
-    @Override
-    public Identifier getId() {
-        return id;
     }
 
     @Override
@@ -82,37 +77,43 @@ public class MixWithWaterRecipe implements Recipe<SimpleInventory> {
         public static final Serializer INSTANCE = new Serializer();
         public static final String ID = "mix_with_water";
 
-        @Override
-        public MixWithWaterRecipe read(Identifier id, JsonObject json) {
-            ItemStack output = ShapedRecipe.outputFromJson(JsonHelper.getObject(json,"output"));
+        public static final MapCodec<MixWithWaterRecipe> CODEC = RecordCodecBuilder.mapCodec(
+                instance -> instance.group(Ingredient.DISALLOW_EMPTY_CODEC.listOf().fieldOf("recipeItem")
+                                .flatXmap(ingredients ->{
+                                    Ingredient[] ingredients1 = ingredients.stream().filter(ingredient -> !ingredient.isEmpty()).toArray(Ingredient[]::new);
+                                    if (ingredients1.length == 0){
+                                        return DataResult.error(()->"No ingredients");
+                                    }
+                                    return DataResult.success(DefaultedList.copyOf(Ingredient.EMPTY,ingredients1));
+                                },DataResult::success).forGetter(MixWithWaterRecipe::getIngredients)
+                        ,(ItemStack.VALIDATED_CODEC.fieldOf("output")).forGetter(recipe -> recipe.output)
+                ).apply(instance, MixWithWaterRecipe::new)
+        );
+        public static final PacketCodec<RegistryByteBuf, MixWithWaterRecipe> PACKET_CODEC = PacketCodec.ofStatic(MixWithWaterRecipe.Serializer::write, MixWithWaterRecipe.Serializer::read);
 
-            JsonArray ingredients = JsonHelper.getArray(json,"ingredients");
-            DefaultedList<Ingredient> inputs = DefaultedList.ofSize(1,Ingredient.EMPTY);
-
-            for(int i=0;i<inputs.size();i++){
-                inputs.set(i,Ingredient.fromJson(ingredients.get(i)));
-            }
-
-            return new MixWithWaterRecipe(id, inputs, output);
-        }
-
-        @Override
-        public MixWithWaterRecipe read(Identifier id, PacketByteBuf buf) {
+        private static MixWithWaterRecipe read(RegistryByteBuf buf) {
             DefaultedList<Ingredient> inputs = DefaultedList.ofSize(buf.readInt(),Ingredient.EMPTY);
+            inputs.replaceAll(ignored -> Ingredient.PACKET_CODEC.decode(buf));
+            ItemStack output = ItemStack.PACKET_CODEC.decode(buf);
+            return new MixWithWaterRecipe(inputs,output);
+        }
 
-            inputs.replaceAll(ignored -> Ingredient.fromPacket(buf));
-
-            ItemStack output = buf.readItemStack();
-            return new MixWithWaterRecipe(id, inputs, output);
+        private static void write(RegistryByteBuf buf, MixWithWaterRecipe recipe) {
+            buf.writeInt(recipe.getIngredients().size());
+            for (Ingredient ingredient : recipe.getIngredients()){
+                Ingredient.PACKET_CODEC.encode(buf,ingredient);
+            }
+            ItemStack.PACKET_CODEC.encode(buf,recipe.getResult(null));
         }
 
         @Override
-        public void write(PacketByteBuf buf, MixWithWaterRecipe recipe) {
-            buf.writeInt(recipe.getIngredients().size());
-            for(Ingredient ingredient : recipe.getIngredients()){
-                ingredient.write(buf);
-            }
-            buf.writeItemStack(recipe.output);
+        public MapCodec<MixWithWaterRecipe> codec() {
+            return CODEC;
+        }
+
+        @Override
+        public PacketCodec<RegistryByteBuf, MixWithWaterRecipe> packetCodec() {
+            return PACKET_CODEC;
         }
     }
 }
